<resources>
    <string name="app_name">splitwise_clone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">Sign up</string>
    <string name="login">Log in</string>
    <string name="terms_privacypolicy_contact">Terms |  Privacy policy | Contact us</string>
    <string name="splitwise">Splitwise</string>
    <string name="Full_name">Full name</string>
    <string name="email">Your email address</string>
    <string name="your_password">Your password</string>
    <string name="password">Password</string>
    <string name="phone_optional">Phone (optional)</string>
    <string name="currency">Currency</string>
    <string name="back">Back</string>
    <string name="Done">Done</string>
    <string name="welcome_back_to_splitwise">Welcome back to splitwise</string>
    <string name="email_address">Email address</string>
    <string name="Forgot_your_password">Forgot your password?</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="enter_your_email_address_we_will_send_your_password">Enter your email address and we\'ll send your password</string>
    <string name="request_password">Request password</string>
    <string name="Welcome_to_splitwise_groups">Welcome to splitwise groups</string>
    <string name="Welcome_to_splitwise_friends">Welcome to splitwise friends</string>
    <string name="Activity">Activity</string>
    <string name="Account">Account</string>
    <string name="user_name">Username</string>
    <string name="user_email">User email</string>
    <string name="logout">Log out</string>
    <string name="contact_support">Contact support</string>
    <string name="faq">FAQ</string>
    <string name="Help">Help</string>
    <string name="preferences">Preferences</string>
    <string name="notificatin_settings">Notification settings</string>
    <string name="email_settings">Email settings</string>
    <string name="groups">Groups</string>
    <string name="friends">Friends</string>
    <string name="activity">Activity</string>
    <string name="account">Account</string>
    <string name="add_friends">Add friends</string>
</resources>