<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_groups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/groups"
        android:icon="@drawable/ic_groups"/>
    <item
        android:id="@+id/nav_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/friends"
        android:icon="@drawable/ic_friends"/>
    <item
        android:id="@+id/nav_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/activity"
        android:icon="@drawable/ic_activity"/>
    <item
        android:id="@+id/nav_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/account"
        android:icon="@drawable/ic_account"/>
</menu>