<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.signup_Fragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_splitwise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:padding="20dp"
            android:text="@string/splitwise"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Full_name"
            android:padding="20dp"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:padding="20dp"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="20dp"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_ph_optional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_optional"
            android:padding="20dp"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:padding="20dp"
            android:text="@string/currency"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="20dp"
            >
            <com.google.android.material.button.MaterialButton
                android:layout_weight=".5"
                android:id="@+id/btn_back"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginEnd="10dp"
                android:text="@string/back"
                android:textColor="@color/md_theme_onSecondary"/>
            <com.google.android.material.button.MaterialButton
                android:layout_weight=".5"
                android:id="@+id/btn_done"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginStart="10dp"
                android:text="@string/Done"
                android:textColor="@color/md_theme_onSecondary"/>
        </LinearLayout>
    </LinearLayout>



</FrameLayout>