<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.forgotpassword_fragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:padding="20dp"
            android:text="@string/reset_your_password"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:padding="20dp"
            android:text="@string/enter_your_email_address_we_will_send_your_password"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:padding="20dp"
            android:textSize="15dp"
            android:layout_marginTop="20dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:gravity="center"
            android:layout_marginTop="20dp"
            >

            <com.google.android.material.button.MaterialButton
                android:layout_weight=".1"
                android:id="@+id/btn_request_pswrd"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:backgroundTint="@color/md_theme_scrim"
                android:text="@string/request_password"
                android:textColor="@color/md_theme_onSecondary"/>

        </LinearLayout>

    </LinearLayout>



</FrameLayout>